[metadata]
name = moo-gbt
version = 0.0.1
author = Shubha, Bhavi
author_email = bhavi.chawla@swiggy.in
description = Library for Multi-objective optimization in Gradient Boosted Trees. 
long_description = file: README.md
long_description_content_type = text/markdown
url = "Add Github Url"
project_urls =
    Bug Tracker = "Add Bug Tracker"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src