[metadata]
name = moo-gbt
version = 0.0.3
author = Shubha, Bhavi
author_email = bhavi.chawla@swiggy.in
description = Library for Multi-objective optimization in Gradient Boosted Trees. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Swiggy/Moo-GBT
project_urls =
    Bug Tracker = https://github.com/Swiggy/Moo-GBT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src